Change Card element to text input, initial CSS.
Card:
- Change input to text and add checking for numeric value

Initial CSS styling:
- Add Google Fonts to index.html.
- Add CSS reset, variables, root styling to index.css

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,12 @@
 .Card {
-  max-width: 15em;
+  width: 15em;
   padding: 1em;
+  border: solid red 1px;
 }
 
 .image {
   width: 100%;
+  height: 20em;
+  object-fit: contain;
+  border: solid green 1px;
 }
