--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,9 +1,11 @@
 .Cart {
+  border: solid yellow 1px;
+  max-width: 5em;
   display: flex;
   flex-direction: column;
   gap: 1em;
-  max-width: 5em;
 }
+
 .image {
   width: 100%;
 }
