--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,11 +1,22 @@
 .Cart {
-  border: solid yellow 1px;
-  max-width: 5em;
+  background-color: var(--color-light);
+  max-width: 8em;
   display: flex;
   flex-direction: column;
   gap: 1em;
+  padding: 0.2em;
 }
 
 .image {
   width: 100%;
+}
+
+.checkoutLink {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  background-color: var(--color-contrast);
+  border-radius: 0.5em;
+  padding: 0.2em;
+  margin: 0.2em;
 }
