--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,7 @@
 .Navbar {
-  width: 100%;
+  width: 90%;
+  max-width: 1600px;
+  margin: 0 auto;
   background-color: var(--color-mid);
   display: flex;
   justify-content: center;
