--- a/src/components/Shop/Shop.module.css
+++ b/src/components/Shop/Shop.module.css
@@ -3,12 +3,15 @@
   max-width: 1600px;
   margin: 0 auto;
   display: flex;
-  border: solid purple 1px;
+  /* border: solid purple 1px; */
 }
 
 .Shop {
+  background-color: white;
   max-width: 100%;
   display: flex;
   flex-wrap: wrap;
-  gap: 2em;
+  justify-content: space-evenly;
+  gap: 1em;
+  padding: 1em;
 }
