Adjust Cart display and add styling throughout. - Add price formatting to Cart - Style Cart - Adjust Cart to show total per item - Add Hero image to home page - Add item count and cart icon to Navbar - Change Navbar link layout to left and right

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,17 +2,43 @@
   width: 90%;
   max-width: 1600px;
   margin: 0 auto;
+  padding: 0 2em;
   background-color: var(--color-mid);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-family: var(--font2);
   font-size: 1.5rem;
-  height: 2em;
-  gap: 1em;
+  height: 48px;
 }
 
 .Navlink {
   text-decoration: none;
   color: black;
+}
+
+.links {
+  display: flex;
+  gap: 1em;
+  margin-right: auto;
+}
+
+.cart {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 0.25em;
+
+}
+
+.cartItemCount {
+  cursor:default;
+}
+
+.cartIcon {
+  background-size: cover;
+  background-position: center;
+  background-image: url("../../assets/cart.svg");
+  width: 1em;
+  height: 1em;
 }
