--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -10,14 +10,27 @@
   object-fit: contain;
 }
 
+.title {
+  /* restrict title to 3 lines of text */
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  /* */
+  height: 4.2em;
+  margin-bottom: 0.2em;
+}
+
 .price {
   font-weight: 700;
   font-size: 1.5rem;
   margin: 0.2em 0;
 }
 
-.title {
-  padding: 0.2em 0;
+.buttonRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .buttonContainer {
@@ -72,6 +85,7 @@
 .inputNotEditing {
   /* min-width: 3em; */
   display: inline;
+  cursor: pointer;
 }
 
 .inputEditing {
@@ -82,4 +96,21 @@
   padding: 0;
   border: none;
   max-width: 3em;
+}
+
+.addToCartButton {
+  composes: button;
+  font-family: var(--font2);
+  font-size: 1.125rem;
+  background-color: var(--color-contrast);
+  /* height: 3.2em; */
+  padding: 0.3em 0.6em;
+  color: white;
+  border: none;
+  border-radius: 2em;
+}
+
+.addToCartButton:hover {
+  box-shadow: var(--color-contrast) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  border-radius: 2em;
 }
