--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,22 +1,78 @@
 .Cart {
   background-color: var(--color-light);
-  max-width: 8em;
+  width: 8em;
+  min-width: 8em;
+  height: calc(100vh - 48px);
   display: flex;
   flex-direction: column;
   gap: 1em;
   padding: 0.2em;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .image {
   width: 100%;
+  height: 9em;
+  object-fit: contain;
+  background-color: white;
+}
+
+.grandTotal {
+  text-align: center;
+  font-weight: 700;
 }
 
 .checkoutLink {
+  font-family: var(--font2);
+  font-size: 1.125rem;
   text-decoration: none;
   text-align: center;
-  color: black;
+  color: white;
   background-color: var(--color-contrast);
-  border-radius: 0.5em;
-  padding: 0.2em;
+  border-radius: 2em;
+  padding: 0.3em 0.6em;
   margin: 0.2em;
+}
+
+.quantity, .price {
+  text-align: center;
+  font-weight: 500;
+  font-size: 0.8rem;
+  margin: 0.2em 0;
+}
+
+.buttonRow {
+  margin-top: -0.3em;
+  border-top: solid 1px var(--color-mid);
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 0.25em;
+  align-items: center;
+  gap: 1em;
+  background-color: white;
+}
+
+.button {
+  cursor: pointer;
+  background-size: cover;
+  background-position: center;
+}
+
+.removeButton {
+  composes: button;
+  background-image: url("../../assets/delete.svg");
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: none;
+  margin: 0 0 0.2em 0.5em;
+}
+
+.productTotal {
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  margin: 0.2em 0;
 }
