Moved App logic and router into new component App. Added Layout component to hold Navbar. Lifted cart state into App component. Add attributions on Home page.

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ https://www.canva.com/colors/color-palettes/tangerine-trend/
 :root {
   --font1: 'Montserrat', sans-serif;
   --font2: 'DM Serif Display', serif;
-  --color-dark: #002134;
+  --color-dark: #292a50;
   --color-light: #C8C4C1;
   --color-contrast: #FFB067;
   --color-mid: #8BA3A8;
@@ -27,4 +27,5 @@ body {
   font-size: 1.125rem;
   line-height: 1.5rem;
   background-color: var(--color-dark);
+  height: 100%;
 }
