--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,31 +5,62 @@
   padding: 2em;
   margin: 0 auto;
   background-color: var(--color-light);
+  overflow: hidden;
 }
 
 .title {
   margin: 0;
   text-align: center;
   font-size: 3rem;
+  line-height: 4rem;
 }
 
 .hero {
+  background-color: var(--color-light);
   width: 100%;
   margin: 2em 0;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   gap: 1em;
 }
 
 .heroText {
+  margin: 0 auto;
+  text-align: center;
   width: 50%;
+  height: 100%;
   font-size: 2rem;
   line-height: 3rem;
   font-weight: 700;
 }
 
+.shopLink {
+  display: inline-block;
+  font-family: var(--font2);
+  font-size: 2rem;
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  background-color: var(--color-contrast);
+  border-radius: 2em;
+  padding: 0.5em 1em;
+  margin: 0.2em 0 2em 0;
+  /* min-width: 10em; */
+}
+
 .heroImage {
-  width: 50%;
-  background-color: red;
-  border-radius: 1em;
+  object-fit: cover;
+  max-height: calc(100vh - 10em);
+}
+
+.attributions {
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 0.9rem;
+}
+
+@media (min-width: 1000px) {
+  .hero {
+    display: flex;
+  }
 }
