--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,14 +1,24 @@
 .Home {
   width: 90%;
   max-width: 1600px;
-  height: calc(100vh - 48px);
-  padding: 2em;
+  /* height: calc(100vh - 48px); */
+  /* padding: 2em; */
   margin: 0 auto;
   background-color: var(--color-light);
   overflow: hidden;
+  display: flex;
+}
+
+.main {
+  width: 100%;
+  padding: 0 1em 0 1em;
+  height: calc(100vh - 48px);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .title {
+  padding-top: 1em;
   margin: 0;
   text-align: center;
   font-size: 3rem;
@@ -50,7 +60,7 @@
 
 .heroImage {
   object-fit: cover;
-  max-height: calc(100vh - 10em);
+  max-height: calc(100vh - 15em);
 }
 
 .attributions {
