--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -28,11 +28,7 @@
   display: flex;
   align-items: center;
   gap: 0.25em;
-
-}
-
-.cartItemCount {
-  cursor:default;
+  cursor: pointer;
 }
 
 .cartIcon {
