--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ https://www.canva.com/colors/color-palettes/tangerine-trend/
 :root {
   --font1: 'Montserrat', sans-serif;
   --font2: 'DM Serif Display', serif;
-  --color-dark: #292a50;
+  --color-dark: #002134;
   --color-light: #C8C4C1;
   --color-contrast: #FFB067;
   --color-mid: #8BA3A8;
